--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,9 @@
       "@components/*": [
         "./components/*"
       ],
+      "@sections/*": [
+        "./sections/*"
+      ],
       "@utils/*": [
         "./utils/*"
       ],
