--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "axios": "^0.25.0",
     "dayjs": "^1.10.7",
     "next": "12.0.10",
     "react": "17.0.2",
