--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-use": "^17.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.1",
     "autoprefixer": "^10.4.2",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
