Auth integrated, signIn complete, WIP user persistance

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -18,6 +18,9 @@
       ],
       "@static/*": [
         "./public/*"
+      ],
+      "@context/*": [
+        "./context/*"
       ]
     }
   },
