--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.1",
     "axios": "^0.25.0",
+    "cookie": "^0.4.2",
     "dayjs": "^1.10.7",
     "next": "12.0.10",
     "qs": "^6.10.3",
